Fixed the progressbar causing a horizontal scrollbar Updated the look of dialog boxes

--- a/src/WebAPI/ClientApp/src/assets/scss/components.scss
+++ b/src/WebAPI/ClientApp/src/assets/scss/components.scss
@@ -1,3 +1,4 @@
+@import 'variables';
 @import '~vuetify/src/styles/styles.sass';
 @import '~vuetify/src/styles/main.sass';
 
@@ -115,8 +116,8 @@ P-btn.vue
 MediaOverviewBar.vue
 */
 .media-overview-bar {
-	border: red 2px solid !important;
 	position: relative;
+	@extend .default-border;
 	@extend .pa-0;
 	@extend .no-background;
 	.v-toolbar__content {
